[gd_scene load_steps=5 format=2]

[ext_resource path="res://main/sys_parts/building_area/ba.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.121569, 0.564706, 0.0470588, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id=3]
Panel/styles/panel = SubResource( 2 )

[node name="ba" type="Area2D"]
script = ExtResource( 1 )
command = 2

[node name="c" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="z_ingx" type="Node2D" parent="."]
z_index = 11

[node name="co" type="Panel" parent="z_ingx"]
margin_top = -64.0
margin_bottom = -64.0
mouse_filter = 2
theme = SubResource( 3 )

[node name="ps" type="Position2D" parent="."]
position = Vector2( 50, 0 )

[connection signal="input_event" from="." to="." method="_on_s_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="z_ingx/co" to="." method="_on_but_mouse_entered"]
[connection signal="mouse_exited" from="z_ingx/co" to="." method="_on_butt_mouse_exited"]
